--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   
   base:
-    image: base_image
+    image: francisco-process-mining
     build:
       context: .
       dockerfile: Dockerfile
@@ -28,7 +28,7 @@ services:
     network_mode: host
 
   jupyter:
-    image: base_image
+    image: francisco-process-mining
     user: root
     volumes:
       - .:/usr/app/
